docs/pages/versions/v35.0.0/index.md
---
title: Introduction
---

import MissingVersionPageNotification from '~/components/plugins/MissingVersionPageNotification';
import Video from '../../../components/plugins/Video'

<MissingVersionPageNotification showForHash="missing" />

[Expo](http://expo.io) is a framework and a platform for universal React applications. It is a set of tools and services built around React Native and native platforms that help you develop, build, deploy, and quickly iterate on iOS, Android, and web apps from the same JavaScript/TypeScript codebase.

## Learning Expo

- ️🛠 **If you are a hands-on, learn-by-doing, practical learner**  then you can [continue to the "Installation" guide](get-started/installation/).
- 📚 **If you prefer to have a theoretical understanding before installing tools and writing code** then the sections in this introduction will help you by explaining in more detail what Expo is. It will help you build a mental model for how to think about app development the Expo way and equip you with the knowledge to know which pieces of Expo are a good fit for your specific needs. [Continue to the "Workflows" page](introduction/managed-vs-bare/).
- 📺 **Want to see a preview of what this looks like before moving on?**  Take a look at the video below to see a "Hello World" application.

<Video file="introduction.mp4" loop={false} />

> *Look at that, the same React code using TypeScript running natively on iOS, Android, and web!* There's more of this kind of content available in the [walkthrough](introduction/walkthrough/).
