docs/pages/versions/v36.0.0/index.md
---
title: Introduction
---

import MissingVersionPageNotification from '~/components/plugins/MissingVersionPageNotification';
import TerminalBlock from '~/components/plugins/TerminalBlock';

<MissingVersionPageNotification showForHash="missing" />

[Expo](http://expo.io) is a framework and a platform for universal React applications. It is a set of tools and services built around React Native and native platforms that help you develop, build, deploy, and quickly iterate on iOS, Android, and web apps from the same JavaScript/TypeScript codebase.

## Quick start

If you are already experienced with React and JavaScript tooling and want to dive right in and figure things out as you go, this is the quickest way to get started:

<TerminalBlock cmd={['# Install the command line tools', 'npm install --global expo-cli','', '# Create a new project', 'expo init my-project']} />

## Slow start

Follow us through a choose-your-own-adventure learning journey and we'll teach you how to get oriented in the Expo and React Native ecosystems and write your first app.

- ️🛠 **If you are a hands-on, learn-by-doing, practical learner** then you can [continue to the "Installation" guide](get-started/installation/).
- 📚 **If you prefer to have a theoretical understanding before installing tools and writing code** then the sections in this introduction will help you by explaining in more detail what Expo is. It will help you build a mental model for how to think about app development the Expo way and equip you with the knowledge to know which pieces of Expo are a good fit for your specific needs. [Continue to the "Workflows" page](introduction/managed-vs-bare/).
